--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "nuxt": "^3.17.5",
-    "vue": "^3.5.16",
-    "onnxruntime-web": "1.19.0"
+    "vue": "^3.5.16"
   },
   "devDependencies": {
     "@nuxt/ui-pro": "^3.1.3",
